login page updates

--- a/logIn.html
+++ b/logIn.html
@@ -5,6 +5,9 @@
     <img src="logo.jpg" align="left" width = 100 height = 100>
     <h1>The Refugee Connection</h1>
     <h2>Sponsored by The Refugee Hub</h2>
+    <br>
+    <br>
+    <label><font size = "6">Sign in</font></label>
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 	
@@ -23,7 +26,7 @@
             <button type="submit">Login</button>
             <label>
               <br>
-              <input type="checkbox" checked="checked" name="remember"> Remember me
+              <input type="checkbox" checked="checked" name="remember"><font size = "4">Remember me</font> 
             </label>
           </div>
         
@@ -32,4 +35,8 @@
           <div class="container">
             <span class="psw"><font size = "4">Forgot <a href="#">password?</a></font></span>
           </div>
+
+          <br>
+          <br>
+          <label><font size = "6">Sign up</font></label>
         </form>
