--- a/logIn.html
+++ b/logIn.html
@@ -38,5 +38,5 @@
 
           <br>
           <br>
-          <label><font size = "6">Sign up</font></label>
+          <label><font size = "6"><a href = "signup.html">Sign up</a></font></label>
         </form>
