--- a/signup.html
+++ b/signup.html
@@ -11,8 +11,12 @@
     <p>Please fill in this form to create an account to be a Mentee.</p>
     <hr>
 
-    <label for="Name"><b>Name</b></label>
-    <input type="text" placeholder="Your Answer" name="name" required>
+    <label for="FName"><b>First Name</b></label>
+    <input type="text" placeholder="Your Answer" name="fname" required>
+    <br>
+
+    <label for="LName"><b>Last Name</b></label>
+    <input type="text" placeholder="Your Answer" name=lfname" required>
     <br>
 
     <label for="phone_no"><b>Phone Number</b></label>
@@ -155,7 +159,7 @@
     <br>
     <input type="text" placeholder="Your Answer" name="characteristics" required>
 
-    <br>
+    <br> 
     <label for="priority"><b>What component of private refugee sponsorship do you wish to prioritize during the course of your mentorship? Please check all applicable</b></label>
     <br>
     <input type="checkbox" name="prioritize" value="application">Application process<br>
