removed some required tags

--- a/signup.html
+++ b/signup.html
@@ -139,7 +139,7 @@
     <input type="checkbox" name="comm" value="Other">Other:<br>
 
     <label for="other_select"><b>If Other, please explain</b></label>
-    <input type="text" placeholder="Your Answer" name="other_select" required>
+    <input type="text" placeholder="Your Answer" name="other_select">
 
     <br>
     <label for="stage"><b>What stage of the sponsorship cycle are you in?</b></label>
@@ -152,7 +152,7 @@
     <input type="radio" name="cycle" value="other1">Other:<br>
 
     <label for="other_select1"><b>If Other selected, please explain</b></label>
-    <input type="text" placeholder="Your Answer" name="other_select1" required>
+    <input type="text" placeholder="Your Answer" name="other_select1">
 
     <br>
     <label for="characteristics"><b>Please briefly describe the characteristics of your sponsorship group (size, community, institution, faith-based/non-faith based, etc.</b></label>
@@ -174,7 +174,7 @@
     <input type="checkbox" name="prioritize" value="other2">Other:<br>
 
     <label for="other_select2"><b>If Other selected, please explain</b></label>
-    <input type="text" placeholder="Your Answer" name="other_select2" required>
+    <input type="text" placeholder="Your Answer" name="other_select2">
 
     <br>
     <label for="type_sponsor"><b>Are you sponsoring a family, couple, group or single individuals?</b></label>
