question and signup

--- a/question.html
+++ b/question.html
@@ -1,5 +1,9 @@
 <html lang="en">
   <head>
+    <script src="js/user.js"></script>
+    <script src="js/require.js"></script>
+    <script src="js/user_server.js"></script>
+  </head>
     <style>
         input{width: 300px}
     </style>
