--- a/user_profile.html
+++ b/user_profile.html
@@ -2,40 +2,40 @@
 <head>
 <title lang="en">Name</title>
 </head>
+
 <body>
-  <h1>User's Name</h1>
-  <p>Phone Number</p>
+  <a href="question.html">Match With a Mentor</a>
+  <h1>User's Info</h1>
+  <p><strong>Phone Number</strong></p>
+  <p><em>User Phone</em></p>
+  <p><strong>Email</strong></p>
+  <p><em>User Email</em></p>
+  <p><strong>City</strong></p>
+  <p><em>User City</em></p>
+  <p><strong>Province/State/Region</strong></p>
+  <p><em>User State</em></p>
+  <p><strong>Country</strong></p>
+  <p><em>User Country</em></p>
+  <p><strong>Time Zone</strong></p>
+  <p><em>User Time Zone</em></p>
+  <p><strong>Languages Spoken</strong></p>
+  <p><em>User Languages</em></p>
+  <p><strong>Which platforms are you comfortable using to communicate with your mentee?</strong></p>
+  <p><em>User Platforms</em></p>
+  <p><strong>Email</strong></p>
+  <p><em>User Email</em></p>
+  <p><strong>Are you current sponsoring a refugee? If you are, what stage of the sponsorship cycle are you in?</strong></p>
   <p>Answer</p>
-  <p>Email</p>
+  <p><strong>Please briefly describe the characteristics of your current sponsorship group (size, community,institution, faith-based/non-faith based,etc.).</strong></p>
   <p>Answer</p>
-  <p>City</p>
+  <p><strong>If not currently part of a sponsorship group, please briefly describe the characterstics of your past sponsorship group(s).</strong></p>
   <p>Answer</p>
-  <p>Province/State/Region</p>
+  <p><strong>From what geographical region(s) have the individuals you have sponsorship originated from?</strong></p>
   <p>Answer</p>
-  <p>Country</p>
+  <p><strong>How many refugees have you sponsored</strong></p>
   <p>Answer</p>
-  <p>Time Zone</p>
+  <p><strong>Do you have experience mentoring others in a formal capacity?</strong></p>
   <p>Answer</p>
-  <p>Languages Spoken</p>
-  <p>Answer</p>
-  <p>Which platforms are you comfortable using to communicate with your mentee?</p>
-  <p>Answer</p>
-  <p>Email</p>
-  <p>Answer</p>
-  <p>Are you current sponsoring a refugee? If you are, what stage of the sponsorship cycle are you in?</p>
-  <p>Answer</p>
-  <p>Please briefly describe the characteristics of your current sponsorship group (size, community,institution, faith-based/non-faith based,etc.).</p>
-  <p>Answer</p>
-  <p>If not currently part of a sponsorship group, please briefly describe the characterstics of your past sponsorship group(s).</p>
-  <p>Answer</p>
-  <p>From what geographical region(s) have the individuals you have sponsorship originated from?</p>
-  <p>Answer</p>
-  <p>How many refugees have you sponsored?</p>
-  <p>Answer</p>
-  <p>Do you have experience mentoring others in a formal capacity?</p>
-  <p>Answer</p>
-  <form>
-    <input type="button" value="Apply to Be a Mentor" onclick="window.location.href='http://www.hyperlinkcode.com/button-links.php'" />
-  </form>
+  <p><strong>What are you hoping to gain from participating in a peer mentorship program</strong></p>
 </body>
 </html>
