lots of changes

--- a/logIn.html
+++ b/logIn.html
@@ -7,7 +7,7 @@
     <h2>Sponsored by The Refugee Hub</h2>
     <br>
     <br>
-    <label><font size = "6">Sign in</font></label>
+    <label><center><font size = "6">Sign in</font></center><center></label>
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 	
@@ -22,8 +22,9 @@
             <br>
             <label for="psw"><font size = "5"><b>Password</b></font></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
-        
-            <button type="submit">Login</button>
+      
+            <br>
+            <label><font size = "4"><a href = "homepage.html">Log in</a></font></label>
             <label>
               <br>
               <input type="checkbox" checked="checked" name="remember"><font size = "4">Remember me</font> 
