user profile changes

--- a/user_profile.html
+++ b/user_profile.html
@@ -28,8 +28,9 @@
               }
               </style>
               </div>
-              <table><tr><td width = 20%>
-              <ul>
+              <h1>User Profile</h1>
+              <div style="float:left; display:inline-block;width:30%;">
+                <ul>
                 <li><a href="user_profile.html">User Profile</a></li>
                 <li><a href="aboutnpo.html">About Refugee Hub</a></li>
                 <li><a href="messaging.html">Message</a></li>
@@ -37,11 +38,11 @@
                 <li><a href="additionalresources.html">Additional Resources</a></li>
                 <li><a href="login.html">Return to Log In</a></li>
               </ul>
-              </td>
-              <td>
+            </div>
+            <div style="float:left; display:inline-block; width:70%;">
               <div float = "right">
                 
-              <h1>User's Name</h1>
+              <h2>User's Name</h2>
               <p>Phone Number</p>
               <p>Answer</p>
               <p>Email</p>
@@ -75,11 +76,9 @@
               <form>
                 <input type="button" value="Apply to Be a Mentor" onclick="window.location.href='http://www.hyperlinkcode.com/button-links.php'" />
               </form>
+            </div>
+          </div>
         </div>
-        </div>
-        </td>
-        </tr>
-        </table>
         </body>
         </head>
         </font>
