added matching html file

--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,9 @@
           <ul>
             <li><a href="user_profile.html">User Profile</a></li>
             <li><a href="aboutnpo.html">About Refugee Hub</a></li>
+            <li><a href="question.html">Ask a question!</a></li>
             <li><a href="messaging.html">Message</a></li>
+            <li><a href="matching.html">Mentorship Matching</a></li>
             <li><a href="forum.html">Discussion Boards</a></li>
             <li><a href="additionalresources.html">Additional Resources</a></li>
             <li><a href="login.html">Return to Log In</a></li>
@@ -43,7 +45,7 @@
           <td>
           <div float = "right">
           <h1>The Refugee Connection Hub Home Page</h1>
-          <h2>Welcome to the Hub!!! This is the place for meentes to find their mentors regarding whatever question they may have.</h2>
+          <h2>Welcome to the Hub!!! This is the place for mentees to find their mentors regarding whatever question they may have.</h2>
           <h2>Please use the Navigation Bar to the left to navigate between the different resources offered on this website.</h2>
           
           </div>
