--- a/logIn.html
+++ b/logIn.html
@@ -14,6 +14,7 @@
     <br>
     <br>
  	<body>
+      <p style=”padding: 10px; color: grey; background-color: white; border: black 2px solid”>
       <form action="action_page.php">
           <div class="container">
             <label for="uname"><font size = "5"><b>Username</b></font></label>
@@ -41,3 +42,4 @@
           <br>
           <label><font size = "6"><a href = "signup.html">Sign up</a></font></label>
         </form>
+      </p>
