--- a/matching.html
+++ b/matching.html
@@ -1,8 +1,9 @@
 <html lang="en">
   <head>
-      <title>About Refugee Hub</title>
-      <h1>Information About Refugee Hub</h1>
+      <title>Mentorship Matching</title>
+      <h1>Mentorship Matching</h1>
       <body bgcolor="#E6E6FA"></body>
+      <br>
       <div overflow = "hidden">
           <div float = "left" class = "float-panel">
           <style>
@@ -43,11 +44,7 @@
               </td>
               <td>
               <div float = "right">
-                  <h2>Mission: Fostering justice and human rights for refugees through innovative research, programs, and partnerships.</h2>
-                  <h2>This global platform is widely recognized as a synergetic website that allows mentees to collaborate with mentors by specifically finding the right match.</h2>
-
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/akpe5uUKv9U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-</iframe>
+                  <h2>This will be where the matching to the mentors take place. The matching is done through tags specified through preferences. </h2>
               
               </div>
               </div>
@@ -59,5 +56,3 @@
             </font>
     
               </html>
-  </head>
-</html>
