--- a/user_profile.html
+++ b/user_profile.html
@@ -33,7 +33,9 @@
                 <ul>
                 <li><a href="user_profile.html">User Profile</a></li>
                 <li><a href="aboutnpo.html">About Refugee Hub</a></li>
+                <li><a href="question.html">Ask a question!</a></li>
                 <li><a href="messaging.html">Message</a></li>
+                <li><a href="matching.html">Mentorship Matching</a></li>
                 <li><a href="forum.html">Discussion Boards</a></li>
                 <li><a href="additionalresources.html">Additional Resources</a></li>
                 <li><a href="login.html">Return to Log In</a></li>
