--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <font face = "verdana">
   <head>
-      <title>The Refugee Connection Hub Home Page</title>
+      <title>The Refugee Global Connection Hub Home Page</title>
       
       <body bgcolor="#E6E6FA">
       <div overflow = "hidden">
@@ -44,7 +44,7 @@
           </td>
           <td>
           <div float = "right">
-          <h1>The Refugee Connection Hub Home Page</h1>
+          <h1>The Refugee Global Connection Hub Home Page</h1>
           <h2>Welcome to the Hub!!! This is the place for mentees to find their mentors regarding whatever question they may have.</h2>
           <h2>Please use the Navigation Bar to the left to navigate between the different resources offered on this website.</h2>
           
