--- a/logIn.html
+++ b/logIn.html
@@ -1,9 +1,9 @@
 <html lang="en">
   <head>
-    <title>The Refugee Connection Hub</title>
+    <title>The Refugee Global Connection Hub</title>
     <body background = "background.jpg">
     <img src="logo.jpg" align="left" width = 100 height = 100>
-    <h1>The Refugee Connection</h1>
+    <h1>The Refugee Global Connection</h1>
     <h2>Sponsored by The Refugee Hub</h2>
     <br>
     <br>
